# scala-training

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: my_checks.yml
my_app/: app.py  performer.py
