[tool.poetry]
name = "my_app"
version = "0.1.0"
description = ""
authors = ["Yaroslav Pekatoros <y.pekatoros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
mypy = "^1.8.0"
pre-commit = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
