[tool.poetry]
name = "my_app"
version = "0.1.0"
description = ""
authors = ["Yaroslav Pekatoros <y.pekatoros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
mypy = "^1.8.0"
pre-commit = "^3.6.1"
ruff = "^0.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -v --durations=0"
cache_dir = ".cache/pytest_cache"

[tool.coverage.run]
branch = true
source = ["gitlab-demo-project"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"
